[tool.poetry]
name = "https-server"
version = "0.1.0"
description = ""
authors = ["AXON <axonasif@gmail.com>"]
readme = "README.md"
packages = [{include = "https_server"}]

[tool.poetry.dependencies]
python = "^3.11"
art = "^6.0"
cryptography = "^41.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
